# DRL_Trading_Project

./: .gitignore  INSTALL.md  README.md  baselines.py  config.py  data_loader.py  evaluation.py  main.py  pyproject.toml  requirements.txt  simple_a2c.py  test_setup.py  trading_env.py  train_rl_models.py
logs/: monitor.monitor.csv
logs/a2c_simple_eval/: evaluations.npz
logs/a2c_tensorboard/A2C_1/: events.out.tfevents.1762103465.Thams-MacBook-Pro.local.53154.0
logs/a2c_tensorboard/A2C_2/: events.out.tfevents.1762103527.Thams-MacBook-Pro.local.53364.0
logs/a2c_tensorboard/A2C_3/: events.out.tfevents.1762103564.Thams-MacBook-Pro.local.53529.0
logs/a2c_tensorboard/A2C_4/: events.out.tfevents.1762103692.Thams-MacBook-Pro.local.53735.0
