[project]
name = "stock-trading-rl-ensemble"
version = "0.1.0"
description = "Deep Reinforcement Learning for Automated Stock Trading: An Ensemble Strategy"
requires-python = ">=3.8,<3.13"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "torch>=2.0.0,<3.0",
    "gymnasium>=0.28.0",
    "stable-baselines3>=2.0.0",
    "yfinance>=0.2.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "pandas-ta>=0.3.14b",
    "tqdm>=4.64.0",
    "joblib>=1.2.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

